# FROG

./: .gitignore  404.html  CLA.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  Readme.md  _navbar.md  _sidebar.md  index.html  nav-tree.json
.github/scripts/: build-pages-navigation.ps1  verify-pages-navigation.ps1
.github/workflows/: refresh-pages-navigation.yml
Conformance/: Readme.md
Conformance/invalid/: 06_widget_must_not_be_promoted_to_public_interface.md  08_widget_reference_must_not_be_treated_as_widget_value.md  100_ordinary_dataflow_connectivity_correspondence_must_not_be_collapsed_into_public_interface_boundary_correspondence_in_canonical_execution_ir.md  102_control_structure_boundary_correspondence_must_not_be_collapsed_into_public_interface_boundary_correspondence_in_canonical_execution_ir.md  104_explicit_state_boundary_correspondence_must_not_be_collapsed_into_public_interface_boundary_correspondence_in_canonical_execution_ir.md  (+57 more)
Conformance/valid/: 01_pure_addition.md  (+59 more)
Examples/: Readme.md
Expression/: Cache.md  Connector.md  Control structures.md  Diagram.md  Front panel.md  Front-panel object model.md  IDE preferences.md  Icon.md  Interface.md  Metadata.md  Readme.md  Schema.md  State and cycles.md  Type.md  Widget behavior.md  Widget class contract.md  Widget interaction.md  Widget package (.wfrog).md  Widget package.md  Widget realization.md  Widget.md
IDE/: Debugging.md  Execution observability.md  Express.md  FROG Snippet.md  FROG Snippet.md.  Observability.md  Palette.md  Probes.md  Readme.md  Snippet.md  Watch.md
IR/: Backend contract.md  Construction rules.md  Derivation rules.md  Execution IR.md  Identity and Mapping.md  Lowering.md  Readme.md  Schema.md
Implementations/Reference/Runtime/cpp/: CMakeLists.txt  Readme.md
Implementations/Reference/Runtime/cpp/include/: contract.hpp  execute.hpp  json.hpp  runtime.hpp  ui.hpp
Implementations/Reference/Runtime/cpp/src/: contract.cpp  execute.cpp  json.cpp  main.cpp  runtime.cpp  ui.cpp
Implementations/Reference/Runtime/cpp/tests/: test_slice05.cpp
Language/: Control structures.md  Execution control and observation boundaries.md  Execution model.md  Expression to validated meaning.md  Readme.md  State and cycles.md
Libraries/: Collections.md  Connectivity.md  Core.md  Core.md.txt  IO.md  Math.md  Readme.md  Signal.md  Text.md  UI.md
Profiles/: Interop.md  Native CPU LLVM Execution contract.md  Native CPU LLVM.md  Readme.md  UI Widget Classes.md
Roadmap/: Milestones.md  Readme.md
Runtime/: Readme.md
Spec/: Cache (optional IR).md  Cache.md  Catalog.md  Connector.md  Diagram.md  Front panel.md  IDE preferences.md  Interface.md  Metadata.md  Readme.md  Widget interaction.md  Widget.md
Strategy/: Readme.md
Versioning/: Matrix.md  Readme.md
assets/: pages-diagram-replacements.js
scripts/: build-sidebar.ps1  verify-github-pages.ps1
(+229 files in other folders)
